<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aula 01</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nome">Nome:</string>
    <string name="salvar">SALVAR</string>
    <string name="next">PROXIMO</string>
    <string name="back">VOLTAR</string>
    <string name="curso">Curso:</string>
    <string name="idade">Idade:</string>

</resources>